--- a/workspaces/packages/eslint-config/package.json
+++ b/workspaces/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jvdwaalsd/eslint-config",
+  "name": "@joostvdwsd/eslint-config",
   "version": "0.0.0",
   "license": "BSD-2-Clause",
   "main": "./src/default/index.js",
@@ -7,9 +7,9 @@
     "src"
   ],
   "dependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@stylistic/eslint-plugin-ts": "^2.6.2",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "eslint-plugin-arca": "^0.16.0",
     "eslint-plugin-markdown": "^3.0.1",
     "eslint-plugin-react": "^7.33.2"
