fix: Eslint versions

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@cp-utils/gitversion": "^0.0.33",
     "@joostvdwsd/constraints-config": "workspace:^",
     "@joostvdwsd/eslint-config": "workspace:^",
-    "@types/eslint": "^8.44.9",
+    "@types/eslint": "^9.6.0",
+    "@types/node": "^22.3.0",
     "@yarnpkg/types": "^4.0.0",
     "eslint": "^9.9.0",
     "jest": "^29.7.0",
