--- a/workspaces/packages/eslint-config/package.json
+++ b/workspaces/packages/eslint-config/package.json
@@ -11,11 +11,11 @@
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint-plugin-arca": "^0.16.0",
-    "eslint-plugin-markdown": "^3.0.1",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-markdown": "^5.1.0",
+    "eslint-plugin-react": "^7.35.0"
   },
   "peerDependencies": {
-    "eslint": "*",
+    "eslint": "^9",
     "typescript": "*"
   },
   "peerDependenciesMeta": {
@@ -32,8 +32,8 @@
     "node": ">=18.12.0"
   },
   "devDependencies": {
-    "@types/eslint": "^8.44.9",
-    "@types/node": "^20.10.7",
+    "@types/eslint": "^9.6.0",
+    "@types/node": "^22.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
