--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "packageManager": "yarn@4.1.0",
   "devDependencies": {
     "@cp-utils/gitversion": "^0.0.33",
-    "@joostvdwsd/constraints-config": "workspace:^",
-    "@joostvdwsd/eslint-config": "workspace:^",
+    "@jwpkg/constraints-config": "workspace:^",
+    "@jwpkg/eslint-config": "workspace:^",
     "@types/eslint": "^9.6.0",
     "@types/node": "^22.3.0",
     "@yarnpkg/types": "^4.0.0",
