--- a/workspaces/packages/eslint-config/package.json
+++ b/workspaces/packages/eslint-config/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/joostvdwsd/common-tools",
+    "url": "https://github.com/jwpkg/common-tools",
     "directory": "workspaces/packages/eslint-config"
   },
   "engines": {
